# Compiler-Lecture

./: CMakeLists.txt  README.md
Section1-BasicOfCompiler/: README.md
Section1-BasicOfCompiler/Calc Language/include/Front-End/Parsing/: AST.hpp  Expr.hpp  Factor.hpp  Parser.hpp  WithDecl.hpp
Section1-BasicOfCompiler/Calc Language/include/Front-End/Scanning/: Lexer.hpp
Section1-BasicOfCompiler/Calc Language/include/Front-End/Semantic/: Sema.hpp
Section1-BasicOfCompiler/Calc Language/src/: Calc.cpp  rtcalc.c
Section1-BasicOfCompiler/Calc Language/src/Front-End/Parsing/: BinaryOp.cpp  WithDecl.cpp
Section1-BasicOfCompiler/Calc Language/src/Front-End/Scanning/: Lexer.cpp  Token.cpp
Section1-BasicOfCompiler/Calc Language/src/Front-End/Semantic/: DeclCheck.cpp
include/: AST.hpp  Expr.hpp  lexer.hpp  parser.hpp  token.hpp
include/Back-End/: CodeGen.hpp  ToIRVisitor.hpp
include/Front-End/Parsing/: AST.hpp  ASTVisitor.hpp  BinaryOp.hpp  Expr.hpp  Factor.hpp  Parser.hpp  WithDecl.hpp
include/Front-End/Scanning/: Lexer.hpp  Token.hpp
include/Front-End/Semantic/: DeclCheck.hpp  Sema.hpp
include/Parsing/: AST.hpp  parser.hpp
include/Scanning/: lexer.hpp
src/: Calc.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp
src/Back-End/: CodeGen.cpp  ToIRVisitor.cpp
src/Front-End/Parsing/: BinaryOp.cpp  Factor.cpp  Parser.cpp  WithDecl.cpp
src/Front-End/Scanning/: Token.cpp
src/Front-End/Semantic/: DeclCheck.cpp  Sema.cpp
src/Parsing/: parser.cpp
src/Scanning/: lexer.cpp  token.cpp
